--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,8 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
+	<a href="/">Home</a>
+	<a href="/backdoor/">Backdoor</a>
 	<body>
 		<h1>Astro</h1>
 	</body>
