--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
-
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html lang="en">
@@ -10,9 +12,16 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<a href="/">Home</a>
-	<a href="/backdoor/">Backdoor</a>
+
 	<body>
+		<Navigation />
 		<h1>Astro</h1>
+		<ul>
+			<li><a href="/posts/backdoor/">Backdoor</a></li>
+			<li><a href="/posts/post-1/">Post 1</a></li>
+			<li><a href="/posts/post-2/">Post 2</a></li>
+			<li><a href="/posts/post-3/">Post 3</a></li>
+		</ul>
+		<Footer />
 	</body>
 </html>
