--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -69,6 +69,10 @@ const textCase = "lowercase";
 	
 	{goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 	<Footer />
+	<!-- Scripts -->
+	<script>
+		import "../scripts/menu.js";
+	  </script>
   </body>
 </html>
 
