--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+// import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 ---
 
 <html lang="en">
@@ -11,17 +12,25 @@ import Footer from '../components/Footer.astro';
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
+		<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
-		<Navigation />
-		<h1>Astro</h1>
-		<ul>
+		<!-- Header -->
+		<Header />
+		<!-- Title with glitch effect -->
+		<h1 data-text="Articles // Works">Articles // Works</h1>
+		<!-- posts -->
+			<ul>
 			<li><a href="/posts/backdoor/">Backdoor</a></li>
-			<li><a href="/posts/post-1/">Post 1</a></li>
+				<li><a href="/posts/post-1/">Post 1</a></li>
 			<li><a href="/posts/post-2/">Post 2</a></li>
 			<li><a href="/posts/post-3/">Post 3</a></li>
 		</ul>
 		<Footer />
+		<!-- Scripts -->
+		<script>
+   		 import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
