--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -6,8 +6,8 @@ const { platform, username } = Astro.props;
 <style>
     a {
       padding: 0.3rem 1rem;
-      color: white;
-      background-color: #4c1d95;
+      color: #ff3b3b;
+      background-color: #000000;
       text-decoration: none;
     }
   </style>
