--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import '../styles/global.css';
 // import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
+import D3Chart from '../components/D3Chart.astro';
 ---
 
 <html lang="en">
@@ -27,6 +28,7 @@ import Header from '../components/Header.astro';
 			<li><a href="/posts/post-2/">Post 2</a></li>
 			<li><a href="/posts/post-3/">Post 3</a></li>
 		</ul>
+		<D3Chart />
 		<Footer />
 		<!-- Scripts -->
 		<script>
