--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,35 +4,10 @@ import '../styles/global.css';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import D3Chart from '../components/D3Chart.astro';
+
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = "Works //";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-		<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
-	</head>
-
-	<body>
-		<!-- Header -->
-		<Header />
-		<!-- Title with glitch effect -->
-		<h1 data-text="Articles // Works">Articles // Works</h1>
-		<!-- posts -->
-			<ul>
-			<li><a href="/posts/backdoor/">Backdoor</a></li>
-				<li><a href="/posts/post-1/">Post 1</a></li>
-			<li><a href="/posts/post-2/">Post 2</a></li>
-			<li><a href="/posts/post-3/">Post 3</a></li>
-		</ul>
-		<D3Chart />
-		<Footer />
-		<!-- Scripts -->
-		<script>
-   		 import "../scripts/menu.js";
-		</script>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+	<h2>Foots //</h2>
+</BaseLayout>
