--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import '../styles/global.css';
 // import Navigation from '../components/Navigation.astro';
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
-import D3Chart from '../components/D3Chart.astro';
+// import Footer from '../components/Footer.astro';
+// import Header from '../components/Header.astro';
+// import D3Chart from '../components/D3Chart.astro';
 
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Works //";
