--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 import '../styles/global.css';
+const allPosts = await Astro.glob('../pages/posts/*.md');
+import BlogPost from '../components/BlogPost.astro';
+
 // import Navigation from '../components/Navigation.astro';
 // import Footer from '../components/Footer.astro';
 // import Header from '../components/Header.astro';
@@ -9,5 +12,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Works //";
 ---
 <BaseLayout pageTitle={pageTitle}>
-	<h2>Foots //</h2>
+    <!-- posts -->
+    <!-- Li ricaviamo in modo dinamico -->
+    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
 </BaseLayout>
