--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -2,12 +2,12 @@
 import BaseLayout from './BaseLayout.astro';
 const { frontmatter } = Astro.props;
 ---
-<!-- <BaseLayout pageTitle={frontmatter.title}> -->
-    <div class="post">
+<BaseLayout pageTitle={frontmatter.title}>
+<div class="post">
     <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by: {frontmatter.author}</p>
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
     <slot />
-    </div>
-<!-- </BaseLayout> -->
+</div>
+</BaseLayout>
