--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -129,3 +129,18 @@ footer .social a:hover,
 footer .social a:focus {
   color: #cca700; /* Colore del testo per hover e focus, un giallo più scuro */
 }
+
+
+.post {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 20px auto; /* Adjust the margin as needed */
+  padding: 20px;
+  max-width: 800px; /* Adjust the max-width as needed */
+  background-color: #000; /* Black background */
+  color: #ff0; /* Yellow text */
+  border-radius: 10px; /* Optional: Rounded corners */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Optional: Add shadow for better visibility */
+}
