--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,6 +6,7 @@ const allPosts = await Astro.glob('../pages/posts/*.md');
 import '../styles/global.css';
 // const pageTitle = "Articles // Works";
 const {pageTitle} = Astro.props;
+const {pageSubTitle} = Astro.props;
 ---
 <html lang="en">
   <head>
@@ -14,11 +15,16 @@ const {pageTitle} = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    <!-- Google font -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap" rel="stylesheet"> -->
   </head>
   <!-- body -->
   <body>
     <Header />
-    <h1>{pageTitle}</h1>
+    <h1 style="font-family: 'Vast Shadow', normal; color: rgb(255, 157, 0);">{pageTitle}</h1>
+    <h3 style="font-family: 'Vast Shadow', sans-serif; color: rgb(255, 157, 0);">{pageSubTitle}</h3>
     
     <slot /> 
 
