--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,5 +15,5 @@ import Social from './Social.astro';
   <p>Learn more about my projects on <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
   <Social platform="twitter" username="astrodotbuild" />
   <Social platform="github" username="withastro" />
-  <Social platform="youtube" username="astrodotbuild" />
+  <Social platform="Linkedin" username="in/federico-bottarelli-3ab199152" />
 </footer>
