--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,7 @@
 
 .libre-baskerville-regular-italic {
   font-family: "Libre Baskerville", serif;
-  font-weight: 400
+  font-weight: 400;
   font-style: italic;
 }
 
