--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,9 @@ import Social from './Social.astro';
 </style>
 
 <footer>
-  <p>Learn more about my projects on <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
+  <p>Learn more about my projects on </p>
+  <p>CIao!</p>
+  <a>ciao</a>
   <Social platform="twitter" username="astrodotbuild" />
   <Social platform="github" username="withastro" />
   <Social platform="Linkedin" username="in/federico-bottarelli-3ab199152" />
