--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,6 @@ const pageSubTitle = "AI Expert, Data Scientist, Software Engineer";
     <!-- posts -->
     <!-- Li ricaviamo in modo dinamico -->
     <p>Welcome to my page! I'm Federico, a Data Science, DataOps, and AI specialist with a deep passion for data and its applications to real-world problems. I'm currently pursuing a Data Science master's degree at Padua University and working as a Junior DataOps Engineer for an Italian company.</p>
-    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    <!-- {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)} -->
     
 </BaseLayout>
