--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,10 +12,27 @@ import Social from './Social.astro';
 </style>
 
 <footer>
-  <p>Learn more about my projects on </p>
-  <p>CIao!</p>
-  <a>ciao</a>
-  <Social platform="twitter" username="astrodotbuild" />
-  <Social platform="github" username="withastro" />
-  <Social platform="Linkedin" username="in/federico-bottarelli-3ab199152" />
+  <div class="social-wrapper">
+    <p class="social-sentence">Learn more about my projects on</p>
+    <a href="/blog">blog</a>
+    <Social platform="twitter" username="f_bottarelli" />
+    <Social platform="github" username="fbottarelli" />
+    <Social platform="Linkedin" username="in/federico-bottarelli-3ab199152" />
+  </div>
 </footer>
+
+
+<style>
+  footer {
+    margin-top: 2rem;
+  }
+  .social-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+  }
+  .social-sentence {
+    margin-right: 0.8rem;
+  }
+</style>
