--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -12,29 +12,33 @@ const identity = {
   occupation: "DataOps and Data scientist",
   hobbies: ["History", "Electronics", "Art"],    
 };
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs","Git",
-    "R",
-    "MySQL",
-    "SQL",
-    "Kafka",
-    "Nifi",
-    "Ansible",
-    "Terraform",
-    "AWS",
-    "Cloudformation",
-    "LangChain",
-    "Machine Learning",
-    "Statistics",
-    "Deep Learning",
-    "MongoDB",
-    "PostgreSQL",
-    "Python",
-    "Denodo",
-    "Cloudera",
-    "Hadoop",
-    "Linux",
-    "Docker",
-    "Ignite",];
+const skills = [
+				"Git",
+				"R",
+				"MySQL",
+				"SQL",
+				"Kafka",
+				"Nifi",
+				"Ansible",
+				"Terraform",
+				"HTML",
+				"CSS",
+				"AWS",
+				"Cloudformation",
+				"LangChain",
+				"Machine Learning",
+				"Statistics",
+				"Deep Learning",
+				"MongoDB",
+				"PostgreSQL",
+				"Python",
+				"Denodo",
+				"Cloudera",
+				"Hadoop",
+				"Linux",
+				"Docker",
+				"Ignite",
+				];
 
 const happy = true;
 const finished = false;
