--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import BlogPost from '../components/BlogPost.astro';
 // import D3Chart from '../components/D3Chart.astro';
 
 import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = "Federico Bottarelli //";
+const pageTitle = "Federico Bottarelli 🧑🏻‍💻";
 const pageSubTitle = "AI Expert, Data Scientist, Software Engineer";
 ---
 <BaseLayout pageTitle={pageTitle} pageSubTitle={pageSubTitle}>
